[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "base-qt"
version = "0.1.0"
description = "Qt adapters and reusable UI helpers for base_core."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "base_core",   
]

[tool.setuptools]
packages = ["base_qt"]